--- a/01_setup_and_basics.ipynb
+++ b/01_setup_and_basics.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -142,9 +142,11 @@
     "\n",
     "# LLM Integration\n",
     "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.llms.gemini import Gemini\n",
     "\n",
     "# Embedding Integration\n",
     "from llama_index.embeddings.openai import OpenAIEmbedding\n",
+    "from llama_index.embeddings.gemini import GeminiEmbedding\n",
     "\n",
     "# Utilities\n",
     "from dotenv import load_dotenv\n",
@@ -164,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ OpenAI API key loaded (starts with: sk-proj-...)\n"
+      "✅ GOOGLE_API_KEY API key loaded (starts with: AIzaSyCg...)\n"
      ]
     }
    ],
@@ -180,16 +182,16 @@
     "load_dotenv()\n",
     "\n",
     "# Verify OpenAI API key is set\n",
-    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "openai_api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
     "\n",
     "if not openai_api_key:\n",
     "    raise ValueError(\n",
-    "        \"❌ OPENAI_API_KEY not found!\\n\"\n",
+    "        \"❌ GOOGLE_API_KEY not found!\\n\"\n",
     "        \"Please create a .env file in the project root with:\\n\"\n",
     "        \"OPENAI_API_KEY=your_key_here\"\n",
     "    )\n",
     "\n",
-    "print(f\"✅ OpenAI API key loaded (starts with: {openai_api_key[:8]}...)\")"
+    "print(f\"✅ GOOGLE_API_KEY API key loaded (starts with: {openai_api_key[:8]}...)\")"
    ]
   },
   {
@@ -221,34 +223,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Global Settings configured successfully!\n",
-      "   LLM: gpt-4o-mini\n",
-      "   Embedding: text-embedding-3-small\n",
-      "   Chunk size: 1024 tokens\n",
-      "   Chunk overlap: 200 tokens\n"
+     "ename": "ValueError",
+     "evalue": "'models/gemini-embedding-001' is not a valid OpenAIEmbeddingModelType",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 19\u001b[39m\n\u001b[32m      7\u001b[39m Settings.llm = OpenAI(\n\u001b[32m      8\u001b[39m     model=\u001b[33m\"\u001b[39m\u001b[33mgemini-2.5-flash\u001b[39m\u001b[33m\"\u001b[39m,  \u001b[38;5;66;03m# Fast, cost-effective for most use cases    \u001b[39;00m\n\u001b[32m      9\u001b[39m     temperature=\u001b[32m0.1\u001b[39m,      \u001b[38;5;66;03m# Low temperature for consistent responses\u001b[39;00m\n\u001b[32m     10\u001b[39m )\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m# Configure Embedding Model\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#Settings.embed_model = OpenAIEmbedding(\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#    model=\"text-embedding-3-small\",  # 1536 dimensions, good balance\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     17\u001b[39m \n\u001b[32m     18\u001b[39m \u001b[38;5;66;03m# Configure Embedding Model\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m Settings.embed_model = \u001b[43mOpenAIEmbedding\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m     20\u001b[39m \u001b[43m    \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mmodels/gemini-embedding-001\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# 1536 dimensions, good balance\u001b[39;49;00m\n\u001b[32m     21\u001b[39m \u001b[43m    \u001b[49m\u001b[43mdimensions\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1536\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m                 \u001b[49m\u001b[38;5;66;43;03m# Can be reduced for speed (e.g., 512)\u001b[39;49;00m\n\u001b[32m     22\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m# Configure Text Chunking\u001b[39;00m\n\u001b[32m     24\u001b[39m Settings.chunk_size = \u001b[32m1024\u001b[39m           \u001b[38;5;66;03m# Tokens per chunk (typical: 512-1024)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\RAG\\llama-index-tutorial\\venvllama\\Lib\\site-packages\\llama_index\\embeddings\\openai\\base.py:307\u001b[39m, in \u001b[36mOpenAIEmbedding.__init__\u001b[39m\u001b[34m(self, mode, model, embed_batch_size, dimensions, additional_kwargs, api_key, api_base, api_version, max_retries, timeout, reuse_client, callback_manager, default_headers, http_client, async_http_client, num_workers, **kwargs)\u001b[39m\n\u001b[32m    299\u001b[39m     additional_kwargs[\u001b[33m\"\u001b[39m\u001b[33mdimensions\u001b[39m\u001b[33m\"\u001b[39m] = dimensions\n\u001b[32m    301\u001b[39m api_key, api_base, api_version = \u001b[38;5;28mself\u001b[39m._resolve_credentials(\n\u001b[32m    302\u001b[39m     api_key=api_key,\n\u001b[32m    303\u001b[39m     api_base=api_base,\n\u001b[32m    304\u001b[39m     api_version=api_version,\n\u001b[32m    305\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m307\u001b[39m query_engine = \u001b[43mget_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmode\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_QUERY_MODE_MODEL_DICT\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    308\u001b[39m text_engine = get_engine(mode, model, _TEXT_MODE_MODEL_DICT)\n\u001b[32m    310\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mmodel_name\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m kwargs:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\RAG\\llama-index-tutorial\\venvllama\\Lib\\site-packages\\llama_index\\embeddings\\openai\\base.py:208\u001b[39m, in \u001b[36mget_engine\u001b[39m\u001b[34m(mode, model, mode_model_dict)\u001b[39m\n\u001b[32m    202\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mget_engine\u001b[39m(\n\u001b[32m    203\u001b[39m     mode: \u001b[38;5;28mstr\u001b[39m,\n\u001b[32m    204\u001b[39m     model: \u001b[38;5;28mstr\u001b[39m,\n\u001b[32m    205\u001b[39m     mode_model_dict: Dict[Tuple[OpenAIEmbeddingMode, \u001b[38;5;28mstr\u001b[39m], OpenAIEmbeddingModeModel],\n\u001b[32m    206\u001b[39m ) -> \u001b[38;5;28mstr\u001b[39m:\n\u001b[32m    207\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Get engine.\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m208\u001b[39m     key = (OpenAIEmbeddingMode(mode), \u001b[43mOpenAIEmbeddingModelType\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m    209\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m mode_model_dict:\n\u001b[32m    210\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mInvalid mode, model combination: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\RAG\\llama-index-tutorial\\venvllama\\Lib\\enum.py:740\u001b[39m, in \u001b[36mEnumType.__call__\u001b[39m\u001b[34m(cls, value, names, module, qualname, type, start, boundary, *values)\u001b[39m\n\u001b[32m    738\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m names:\n\u001b[32m    739\u001b[39m         value = (value, names) + values\n\u001b[32m--> \u001b[39m\u001b[32m740\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m.\u001b[49m\u001b[34;43m__new__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mcls\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    741\u001b[39m \u001b[38;5;66;03m# otherwise, functional API: we're creating a new Enum type\u001b[39;00m\n\u001b[32m    742\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m names \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mtype\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    743\u001b[39m     \u001b[38;5;66;03m# no body? no data-type? possibly wrong usage\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\RAG\\llama-index-tutorial\\venvllama\\Lib\\enum.py:1154\u001b[39m, in \u001b[36mEnum.__new__\u001b[39m\u001b[34m(cls, value)\u001b[39m\n\u001b[32m   1152\u001b[39m ve_exc = \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[33m is not a valid \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m\"\u001b[39m % (value, \u001b[38;5;28mcls\u001b[39m.\u001b[34m__qualname__\u001b[39m))\n\u001b[32m   1153\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m exc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m1154\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m ve_exc\n\u001b[32m   1155\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m exc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m   1156\u001b[39m     exc = \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[32m   1157\u001b[39m             \u001b[33m'\u001b[39m\u001b[33merror in \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m._missing_: returned \u001b[39m\u001b[38;5;132;01m%r\u001b[39;00m\u001b[33m instead of None or a valid member\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m   1158\u001b[39m             % (\u001b[38;5;28mcls\u001b[39m.\u001b[34m__name__\u001b[39m, result)\n\u001b[32m   1159\u001b[39m             )\n",
+      "\u001b[31mValueError\u001b[39m: 'models/gemini-embedding-001' is not a valid OpenAIEmbeddingModelType"
      ]
     }
    ],
    "source": [
     "# Configure LLM\n",
-    "Settings.llm = OpenAI(\n",
-    "    model=\"gpt-4o-mini\",  # Fast, cost-effective for most use cases\n",
+    "#Settings.llm = OpenAI(\n",
+    "#    model=\"gpt-4o-mini\",  # Fast, cost-effective for most use cases\n",
+    "#     temperature=0.1,      # Low temperature for consistent responses\n",
+    "#)\n",
+    "\n",
+    "Settings.llm = Gemini(\n",
+    "    model=\"gemini-2.5-flash\",  # Fast, cost-effective for most use cases    \n",
     "    temperature=0.1,      # Low temperature for consistent responses\n",
     ")\n",
     "\n",
     "# Configure Embedding Model\n",
-    "Settings.embed_model = OpenAIEmbedding(\n",
-    "    model=\"text-embedding-3-small\",  # 1536 dimensions, good balance\n",
+    "#Settings.embed_model = OpenAIEmbedding(\n",
+    "#    model=\"text-embedding-3-small\",  # 1536 dimensions, good balance\n",
+    "#    dimensions=1536,                 # Can be reduced for speed (e.g., 512)\n",
+    "#)\n",
+    "\n",
+    "# Configure Embedding Model\n",
+    "Settings.embed_model = GeminiEmbedding(\n",
+    "    model=\"models/gemini-embedding-001\",  # 1536 dimensions, good balance\n",
     "    dimensions=1536,                 # Can be reduced for speed (e.g., 512)\n",
     ")\n",
-    "\n",
     "# Configure Text Chunking\n",
     "Settings.chunk_size = 1024           # Tokens per chunk (typical: 512-1024)\n",
     "Settings.chunk_overlap = 200         # 20% overlap helps preserve context\n",
@@ -973,7 +989,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venvllama",
    "language": "python",
    "name": "python3"
   },
@@ -987,7 +1003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
