--- a/02_documents_and_chunking.ipynb
+++ b/02_documents_and_chunking.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +79,9 @@
     "from llama_index.llms.openai import OpenAI\n",
     "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "\n",
+    "from llama_index.llms.gemini import Gemini\n",
+    "from llama_index.embeddings.gemini import GeminiEmbedding\n",
+    "\n",
     "# Utilities\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,10 +110,18 @@
     "# Load environment variables and configure Settings\n",
     "load_dotenv()\n",
     "\n",
-    "Settings.llm = OpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
-    "Settings.embed_model = OpenAIEmbedding(\n",
-    "    model=\"text-embedding-3-small\",\n",
-    "    dimensions=1536\n",
+    "#Settings.llm = OpenAI(model=\"gpt-4o-mini\", temperature=0.1)\n",
+    "#Settings.embed_model = OpenAIEmbedding(\n",
+    "#    model=\"text-embedding-3-small\",\n",
+    "#    dimensions=1536\n",
+    "#)\n",
+    "Settings.llm = Gemini(\n",
+    "    model=\"gemini-2.5-flash\",  # Fast, cost-effective for most use cases    \n",
+    "    temperature=0.1,      # Low temperature for consistent responses\n",
+    ")\n",
+    "Settings.embed_model = GeminiEmbedding(\n",
+    "    model=\"models/gemini-embedding-001\",  # 1536 dimensions, good balance\n",
+    "    dimensions=1536,                 # Can be reduced for speed (e.g., 512)\n",
     ")\n",
     "\n",
     "print(\"✅ Settings configured\")"
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,8 +152,8 @@
       "Research papers directory: True\n",
       "\n",
       "Found 2 PDF files in research_papers/\n",
-      "  - brain_tumor_2024_removed.pdf\n",
-      "  - brain_tumor_2023_2_removed.pdf\n"
+      "  - Mutual Separation Agreement.pdf\n",
+      "  - RAG_1stPaper.pdf\n"
      ]
     }
    ],
@@ -180,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +318,7 @@
       "  category: transformers\n",
       "  citations: 85000\n",
       "  source: research_paper\n",
-      "  processed_date: 2025-12-21T07:43:02.600762\n",
+      "  processed_date: 2025-12-21T10:42:38.896734\n",
       "  char_count: 1006\n",
       "  word_count: 123\n"
      ]
@@ -347,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +377,15 @@
       "\n",
       "        Abstract: The dominant sequence transduction models are based on complex recurrent or \n",
       "        convolutiona...\n",
-      "  Metadata: {'title': 'Attention Is All You Need', 'authors': 'Vaswani et al.', 'year': 2017, 'category': 'transformers', 'citations': 85000, 'source': 'research_paper', 'processed_date': '2025-12-21T07:43:02.600762', 'char_count': 1006, 'word_count': 123}\n"
+      "  Metadata: {'title': 'Attention Is All You Need', 'authors': 'Vaswani et al.', 'year': 2017, 'category': 'transformers', 'citations': 85000, 'source': 'research_paper', 'processed_date': '2025-12-21T10:42:38.896734', 'char_count': 1006, 'word_count': 123}\n",
+      "\n",
+      "Second node preview:\n",
+      "  Text (first 200 chars): Title: BERT: Pre-training of Deep Bidirectional Transformers for Language Understanding\n",
+      "        Authors: Devlin et al.\n",
+      "        Year: 2019\n",
+      "\n",
+      "        Abstract: We introduce a new language representation ...\n",
+      "  Metadata: {'title': 'BERT', 'authors': 'Devlin et al.', 'year': 2019, 'category': 'language_models', 'citations': 65000, 'source': 'research_paper', 'processed_date': '2025-12-21T10:42:38.898733', 'char_count': 895, 'word_count': 102}\n"
      ]
     }
    ],
@@ -387,7 +406,11 @@
     "\n",
     "print(f\"\\nFirst node preview:\")\n",
     "print(f\"  Text (first 200 chars): {sentence_nodes[0].text[:200]}...\")\n",
-    "print(f\"  Metadata: {sentence_nodes[0].metadata}\")"
+    "print(f\"  Metadata: {sentence_nodes[0].metadata}\")\n",
+    "\n",
+    "print(f\"\\nSecond node preview:\")\n",
+    "print(f\"  Text (first 200 chars): {sentence_nodes[1].text[:200]}...\")\n",
+    "print(f\"  Metadata: {sentence_nodes[1].metadata}\")"
    ]
   },
   {
@@ -419,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +464,7 @@
    "source": [
     "# TokenTextSplitter: Precise token count control\n",
     "token_splitter = TokenTextSplitter(\n",
-    "    chunk_size=512,      # Exact token limit\n",
+    "    chunk_size=1024,      # Exact token limit\n",
     "    chunk_overlap=128,   # 25% overlap\n",
     "    separator=\" \",\n",
     ")\n",
@@ -458,6 +481,17 @@
     "print(f\"  SentenceSplitter: {len(sentence_nodes)} nodes\")\n",
     "print(f\"  TokenTextSplitter: {len(token_nodes)} nodes\")\n",
     "print(f\"  Difference: {abs(len(sentence_nodes) - len(token_nodes))} nodes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"\\nFirst node preview:\")\n",
+    "print(f\"  Text (first 200 chars): {token_nodes[0].text[:200]}...\")\n",
+    "print(f\"  Metadata: {token_nodes[0].metadata}\")"
    ]
   },
   {
@@ -1222,7 +1256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venvllama",
    "language": "python",
    "name": "python3"
   },
@@ -1236,7 +1270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
