--- a/03_indexing_and_simple_queries.ipynb
+++ b/03_indexing_and_simple_queries.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
      "output_type": "stream",
      "text": [
       "✅ Created 5 sample documents\n",
-      "   Topics: vector_databases, chroma, algorithms, qdrant, embeddings\n"
+      "   Topics: chroma, vector_databases, qdrant, algorithms, embeddings\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b61afd91591437586da2c82bdcc2a91",
+       "model_id": "ff8d80bf9bd044a480e9a3fa6097b133",
        "version_major": 2,
        "version_minor": 0
       },
@@ -247,7 +247,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "128c51cd4221440986e92d654f2a91be",
+       "model_id": "7dff7a42d9b6452ea78943fa3d9a5347",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✅ Index created in 1.51 seconds\n",
+      "✅ Index created in 1.76 seconds\n",
       "   Vector store type: SimpleVectorStore (in-memory)\n"
      ]
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cb538c846e845cd8337715c3bd9d289",
+       "model_id": "540ad63e51d2458cb7afcac3c9afed74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,7 +342,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e577a57dc3f4a74a2206efd581b49f4",
+       "model_id": "ad128e96e16248b9aae16385cd847661",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +358,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✅ Chroma index created in 1.04 seconds\n",
+      "✅ Chroma index created in 1.77 seconds\n",
       "   Collection: llama_index_docs\n",
       "   Documents indexed: 5\n"
      ]
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3ae73813ebae4a4ab58ceddadbfe97f5",
+       "model_id": "75fc0457fc3548bda7831a2280bc7707",
        "version_major": 2,
        "version_minor": 0
       },
@@ -445,7 +445,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a93986a248440f4a296f0d719335efa",
+       "model_id": "745802426899485b888998a7beec949d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -461,7 +461,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "✅ Qdrant index created in 1.04 seconds\n",
+      "✅ Qdrant index created in 1.95 seconds\n",
       "   Collection: llama_index_qdrant\n"
      ]
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
      "text": [
       "OpenAI Embedding (text-embedding-3-small):\n",
       "  Dimensions: 1536\n",
-      "  Time: 665.65ms\n",
+      "  Time: 501.56ms\n",
       "  First 5 values: [-0.02636837400496006, 0.040111102163791656, 0.008521012030541897, -0.012482762336730957, -0.007683198899030685]\n"
      ]
     }
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b643635d41d4ce0b1f95eb4fdfef330",
+       "model_id": "0cf8fc509d624172bad90969914cba26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -602,7 +602,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4bb81632e3414150a9f07d1b4e9185ed",
+       "model_id": "945870613f1849fd803dcaab7ac9f580",
        "version_major": 2,
        "version_minor": 0
       },
@@ -616,7 +616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd50087d8dfa4f139cea71f13eb89472",
+       "model_id": "7cbbd6addd924fa38cbaf12df2ceb836",
        "version_major": 2,
        "version_minor": 0
       },
@@ -630,7 +630,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f38220ccae404b0ba009b87b1dafcc51",
+       "model_id": "b0bac7c149234ec48b9ab44e04c402e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,7 +644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "650dd2f0c92643e3b9ba2faf98e18e9b",
+       "model_id": "bc897b4e1d3249bda95ec3a70895ed5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -658,7 +658,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cd5593636914298929fcabca7c0ef0c",
+       "model_id": "247b48e30dd14d64b14c2e664802e485",
        "version_major": 2,
        "version_minor": 0
       },
@@ -672,7 +672,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc8f0b33e139434cbcd0f23f3d3aca41",
+       "model_id": "9088f842668d4cf9932a073fd9ffea34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -686,7 +686,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1637874adc244d3285ac14b90c86d05e",
+       "model_id": "20315f0e12eb405c802da1b638176a18",
        "version_major": 2,
        "version_minor": 0
       },
@@ -700,7 +700,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a38bc02cdb94c44b1f922163ebc1eac",
+       "model_id": "0d679a4fa60547fc88a4281b2bb7bacb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -714,7 +714,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "912eda077bba4fe49b6d3435e830ff8d",
+       "model_id": "64844e4378434624bd19c7b8611890ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -728,7 +728,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14f4629f8e4142f99ec5e8882db5c829",
+       "model_id": "e0d15b1a00a14c30b603a4147982a929",
        "version_major": 2,
        "version_minor": 0
       },
@@ -746,7 +746,7 @@
       "\n",
       "HuggingFace Embedding (all-MiniLM-L6-v2):\n",
       "  Dimensions: 384\n",
-      "  Time: 2333.89ms\n",
+      "  Time: 2593.42ms\n",
       "  First 5 values: [0.04381900280714035, -0.009547049179673195, -0.020091239362955093, 0.01502758264541626, 0.01334494911134243]\n"
      ]
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -787,8 +787,8 @@
       "\n",
       "Embedding Model Comparison:\n",
       "                        Model  Dimensions Time (ms)            Cost   Quality Hosting\n",
-      "OpenAI text-embedding-3-small        1536    665.65 $0.02/1M tokens Excellent     API\n",
-      "             all-MiniLM-L6-v2         384   2333.89            Free      Good   Local\n"
+      "OpenAI text-embedding-3-small        1536    501.56 $0.02/1M tokens Excellent     API\n",
+      "             all-MiniLM-L6-v2         384   2593.42            Free      Good   Local\n"
      ]
     }
    ],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
       "\n",
       "Test query on loaded index:\n",
       "  Query: What is Qdrant?\n",
-      "  Response: Qdrant is an open-source vector database that is implemented in Rust. It features HNSW indexing, filtering capabilities, and supports hybrid search. Qdrant can be deployed locally using Docker or in cloud environments. Notable features include payload filtering, quantization for memory efficiency, and the ability to operate in distributed setups. It is particularly effective for production applications involving retrieval-augmented generation (RAG).\n"
+      "  Response: Qdrant is an open-source vector database that is implemented in Rust. It features HNSW indexing, filtering capabilities, and supports hybrid search. Qdrant can be deployed locally using Docker or in cloud environments. Its key functionalities include payload filtering, quantization for memory efficiency, and support for distributed deployments, making it particularly suitable for production applications involving retrieval-augmented generation (RAG).\n"
      ]
     }
    ],
@@ -1021,27 +1021,27 @@
       "================================================================================\n",
       "\n",
       "Mode: compact\n",
-      "  Time: 5.03s\n",
-      "  Response length: 627 chars\n",
-      "  Response: HNSW, or Hierarchical Navigable Small World, is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph where each layer represents a subset of the ...\n",
+      "  Time: 4.39s\n",
+      "  Response length: 610 chars\n",
+      "  Response: HNSW, or Hierarchical Navigable Small World, is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph where each layer is a subset of the previous...\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Mode: tree_summarize\n",
-      "  Time: 4.19s\n",
-      "  Response length: 611 chars\n",
-      "  Response: HNSW, or Hierarchical Navigable Small World, is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph, where each layer is a subset of the previou...\n",
+      "  Time: 3.96s\n",
+      "  Response length: 618 chars\n",
+      "  Response: HNSW, or Hierarchical Navigable Small World, is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph where each layer represents a subset of the ...\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Mode: simple_summarize\n",
-      "  Time: 2.73s\n",
-      "  Response length: 565 chars\n",
-      "  Response: HNSW (Hierarchical Navigable Small World) is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph, where each layer represents a subset of the no...\n",
+      "  Time: 3.51s\n",
+      "  Response length: 588 chars\n",
+      "  Response: HNSW (Hierarchical Navigable Small World) is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph, where each layer is a subset of the previous o...\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "Mode: refine\n",
-      "  Time: 7.62s\n",
-      "  Response length: 750 chars\n",
-      "  Response: HNSW, or Hierarchical Navigable Small World, is a graph-based algorithm specifically designed for approximate nearest neighbor search. It builds a multi-layer graph, where each layer acts as a subset ...\n",
+      "  Time: 7.47s\n",
+      "  Response length: 748 chars\n",
+      "  Response: HNSW, or Hierarchical Navigable Small World, is a graph-based algorithm specifically designed for approximate nearest neighbor search. It builds a multi-layer graph, with each layer representing a sub...\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1106,9 +1106,9 @@
       "\n",
       "Streaming response:\n",
       "--------------------------------------------------------------------------------\n",
-      "Qdrant and Chroma are both vector databases, but they differ in several aspects. Chroma is lightweight and designed for easy setup, making it suitable for prototyping and small-to-medium scale applications. It runs in-memory or can persist to disk and integrates well with tools like LangChain and LlamaIndex. Chroma supports metadata filtering and various distance metrics.\n",
+      "Qdrant and Chroma are both vector databases, but they cater to different needs and use cases. Chroma is lightweight and designed for easy setup, making it suitable for prototyping and small-to-medium scale applications. It runs in-memory or can persist to disk and integrates well with tools like LangChain and LlamaIndex. Chroma supports metadata filtering and various distance metrics.\n",
       "\n",
-      "On the other hand, Qdrant is an open-source database written in Rust, offering more advanced features such as HNSW indexing, hybrid search, and payload filtering. It can run locally using Docker or in the cloud and is optimized for production applications, particularly in retrieval-augmented generation (RAG) scenarios. Additionally, Qdrant includes capabilities for quantization to reduce memory usage and supports distributed deployments.\n",
+      "On the other hand, Qdrant is an open-source database written in Rust, offering more advanced features such as HNSW indexing, filtering, and hybrid search. It can be deployed locally using Docker or in the cloud and is optimized for production applications, particularly in retrieval-augmented generation (RAG) scenarios. Qdrant also includes features like payload filtering, quantization for memory efficiency, and support for distributed deployments.\n",
       "================================================================================\n"
      ]
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1190,7 @@
       "        search. It builds a multi-layer graph wh...\n",
       "\n",
       "Node 3:\n",
-      "  Score: 0.2871\n",
+      "  Score: 0.2869\n",
       "  Topic: qdrant\n",
       "  Difficulty: intermediate\n",
       "  Text (first 150 chars): Qdrant is an open-source vector database written in Rust. It supports HNSW indexing, filtering,\n",
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
      "output_type": "stream",
      "text": [
       "Response from custom retriever:\n",
-      "HNSW (Hierarchical Navigable Small World) is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph, where each layer is a subset of the previous one, allowing for efficient navigation through the data. The algorithm is known for its excellent query performance, achieving response times in the sub-millisecond range while maintaining high recall rates. Key parameters of HNSW include M, which denotes the number of connections per node, and ef_construction, which specifies the search width during the construction phase of the graph.\n"
+      "HNSW, or Hierarchical Navigable Small World, is a graph-based algorithm designed for approximate nearest neighbor search. It constructs a multi-layer graph where each layer is a subset of the previous one, allowing for efficient navigation through the data. The algorithm is known for its excellent query performance, achieving response times in the sub-millisecond range while maintaining high recall rates. Key parameters of HNSW include M, which determines the number of connections per node, and ef_construction, which defines the search width during the construction phase of the graph. This structure enables effective and rapid similarity searches in high-dimensional spaces.\n"
      ]
     }
    ],
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
