--- a/advanced_retrieval copy.ipynb
+++ b/advanced_retrieval copy.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,6 +87,8 @@
     "# LLM and Embeddings\n",
     "from llama_index.llms.openai import OpenAI\n",
     "from llama_index.embeddings.openai import OpenAIEmbedding\n",
+    "from llama_index.embeddings.gemini import GeminiEmbedding\n",
+    "from llama_index.llms.gemini import Gemini\n",
     "\n",
     "# Utilities\n",
     "from dotenv import load_dotenv\n",
@@ -1225,7 +1227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1239,7 +1241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
